crates/air/tests/snapshots/help__format_help-3.snap
---
source: crates/air/tests/help.rs
expression: "run(Command::new(get_air_bin()).arg(\"format\").arg(\"-h\"))"
---
success: true
exit_code: 0
----- stdout -----
Format a set of files or directories

Usage: air format [OPTIONS] [PATHS]...

Arguments:
  [PATHS]...  The files or directories to format

Options:
      --check[=<OUTPUT_FORMAT>]  If enabled, format results are not written back to the file.
                                 Instead, exit with a non-zero status code if any files would have
                                 been modified, and zero otherwise. An optional `OUTPUT_FORMAT` type
                                 can be provided, one of: `interactive` or `github`. Defaults to
                                 `interactive`
  -h, --help                     Print help

Global options:
      --log-level=<LEVEL>  The log level. One of: `error`, `warn`, `info`, `debug`, or `trace`.
                           Defaults to `warn`
      --no-color           Disable colored output. To turn colored output off, either set this
                           option or set the environment variable `NO_COLOR` to any non-zero value

----- stderr -----

----- args -----
format
-h
